feat(ContentSwitcher): add support for light variant (#6442)
* feat(tokens): create hover-light-ui token per spec

* feat(ContentSwitcher): add support for light variant

* docs(ContentSwitcher): add light knob

* chore: update snapshots

* fix(content-switcher): hide selected button dividers

* refactor(content-switcher): remove :not selectors

* refactor(content-switcher): reduce selector specificity

--- a/packages/components/src/components/content-switcher/_content-switcher.scss
+++ b/packages/components/src/components/content-switcher/_content-switcher.scss
@@ -73,6 +73,14 @@
     }
   }
 
+  .#{$prefix}--content-switcher--light .#{$prefix}--content-switcher-btn {
+    background-color: $ui-02;
+
+    &:hover {
+      background-color: $hover-light-ui;
+    }
+  }
+
   .#{$prefix}--content-switcher-btn:first-child {
     border-top-left-radius: rem(4px);
     border-bottom-left-radius: rem(4px);
@@ -83,7 +91,7 @@
     border-bottom-right-radius: rem(4px);
   }
 
-  .#{$prefix}--content-switcher-btn:not(:first-of-type)::before {
+  .#{$prefix}--content-switcher-btn::before {
     content: '';
     display: block;
     height: rem(16px);
@@ -94,14 +102,38 @@
     left: 0;
   }
 
-  .#{$prefix}--content-switcher-btn.#{$prefix}--content-switcher--selected::before,
-  .#{$prefix}--content-switcher-btn.#{$prefix}--content-switcher--selected
+  .#{$prefix}--content-switcher-btn:first-of-type::before {
+    display: none;
+  }
+
+  .#{$prefix}--content-switcher--light
+    .#{$prefix}--content-switcher-btn::before {
+    background-color: $decorative-01;
+  }
+
+  .#{$prefix}--content-switcher--light
+    .#{$prefix}--content-switcher-btn:focus::before,
+  .#{$prefix}--content-switcher--light
+    .#{$prefix}--content-switcher-btn:focus
+    + .#{$prefix}--content-switcher-btn::before,
+  .#{$prefix}--content-switcher--light
+    .#{$prefix}--content-switcher-btn:hover::before,
+  .#{$prefix}--content-switcher--light
+    .#{$prefix}--content-switcher-btn:hover
+    + .#{$prefix}--content-switcher-btn::before,
+  .#{$prefix}--content-switcher--light
+    .#{$prefix}--content-switcher--selected::before,
+  .#{$prefix}--content-switcher--light
+    .#{$prefix}--content-switcher--selected
     + .#{$prefix}--content-switcher-btn::before,
   .#{$prefix}--content-switcher-btn:focus::before,
   .#{$prefix}--content-switcher-btn:focus
     + .#{$prefix}--content-switcher-btn::before,
   .#{$prefix}--content-switcher-btn:hover::before,
   .#{$prefix}--content-switcher-btn:hover
+    + .#{$prefix}--content-switcher-btn::before,
+  .#{$prefix}--content-switcher--selected::before,
+  .#{$prefix}--content-switcher--selected
     + .#{$prefix}--content-switcher-btn::before {
     background-color: transparent;
   }
@@ -127,6 +159,8 @@
     fill: $text-01;
   }
 
+  .#{$prefix}--content-switcher--light
+    .#{$prefix}--content-switcher-btn.#{$prefix}--content-switcher--selected,
   .#{$prefix}--content-switcher-btn.#{$prefix}--content-switcher--selected {
     background-color: $ui-05;
     color: $inverse-01;
