fix(search): change fill to inherit (#6549)
* fix(search): change fill to inherit

* feat(search): add fill to svg close

* chore(search): change fill to inherit

Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>

--- a/packages/components/src/components/search/_search.scss
+++ b/packages/components/src/components/search/_search.scss
@@ -160,6 +160,10 @@
     }
   }
 
+  .#{$prefix}--search-close svg {
+    fill: inherit;
+  }
+
   .#{$prefix}--search-close,
   .#{$prefix}--search-button {
     display: flex;
