fix(data-table): fix data-table with sorting in ie11 (#6550)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/data-table/_data-table-sort.scss
+++ b/packages/components/src/components/data-table/_data-table-sort.scss
@@ -63,6 +63,37 @@
     display: flex;
     align-items: center;
     height: 100%;
+    min-height: 3rem;
+  }
+
+  .#{$prefix}--data-table--sort:not(.#{$prefix}--data-table--compact):not(.#{$prefix}--data-table--short):not(.#{$prefix}--data-table--tall)
+    th
+    .#{$prefix}--table-sort__flex {
+    /* IE11 workaround for align-items: center and min-height
+        https://github.com/philipwalton/flexbugs/issues/231 */
+    @media screen and (-ms-high-contrast: active),
+      screen and (-ms-high-contrast: none) {
+      height: 2.99rem;
+    }
+  }
+
+  .#{$prefix}--data-table--compact.#{$prefix}--data-table--sort
+    th
+    .#{$prefix}--table-sort__flex {
+    min-height: 1.5rem;
+  }
+
+  .#{$prefix}--data-table--short.#{$prefix}--data-table--sort
+    th
+    .#{$prefix}--table-sort__flex {
+    min-height: 2rem;
+  }
+
+  .#{$prefix}--data-table--tall.#{$prefix}--data-table--sort
+    th
+    .#{$prefix}--table-sort__flex {
+    align-items: flex-start;
+    min-height: 4rem;
   }
 
   // -------------------------------------
@@ -78,7 +109,7 @@
   }
 
   .#{$prefix}--table-sort__icon-unsorted {
-    width: auto;
+    width: rem(20px);
     min-width: $layout-01;
     margin-right: $spacing-05;
     margin-left: $spacing-03;
@@ -107,7 +138,7 @@
   }
 
   .#{$prefix}--table-sort__icon {
-    width: auto;
+    width: rem(20px);
     min-width: $layout-01;
     margin-right: $spacing-05;
     margin-left: $spacing-03;
@@ -140,12 +171,6 @@
     .#{$prefix}--table-sort {
     display: inline-block;
     height: rem(64px);
-  }
-
-  .#{$prefix}--data-table--tall.#{$prefix}--data-table--sort
-    th
-    .#{$prefix}--table-sort__flex {
-    align-items: flex-start;
   }
 
   .#{$prefix}--data-table--tall .#{$prefix}--table-sort__icon-unsorted,
