fix(search): design tweaks to search component (#6584)
* fix(search): small design tweaks

* fix(search): updates to other size variants

* chore(tests): update tests

--- a/packages/components/src/components/search/_search.scss
+++ b/packages/components/src/components/search/_search.scss
@@ -32,7 +32,7 @@
 
   .#{$prefix}--search-input {
     @include reset;
-    @include type-style('body-short-02');
+    @include type-style('body-short-01');
     @include focus-outline('reset');
 
     order: 1;
@@ -81,42 +81,44 @@
     background: $field-02;
   }
 
+  // Small styles
   .#{$prefix}--search--sm .#{$prefix}--search-input {
-    @include type-style('body-short-01');
-
     height: rem(32px);
+    // 8px padding on either side of icon + 16px icon (32px)
+    padding: 0 $spacing-07;
   }
 
-  .#{$prefix}--search--lg .#{$prefix}--search-input {
-    @include type-style('body-short-02');
+  .#{$prefix}--search--sm .#{$prefix}--search-magnifier {
+    left: rem(8px);
+  }
 
+  // Large styles
+  .#{$prefix}--search--lg .#{$prefix}--search-input {
     height: rem(40px);
+    // 12px padding on either side of icon + 16px icon (40px)
+    padding: 0 $spacing-08;
+  }
+
+  .#{$prefix}--search--lg .#{$prefix}--search-magnifier {
+    left: rem(12px);
   }
 
   .#{$prefix}--search--xl .#{$prefix}--search-input {
-    @include type-style('body-short-02');
-
     height: rem(48px);
-    padding: 0 rem(64px) 0 rem(48px);
+    // 16px padding on either side of icon + 16px icon (48px)
+    padding: 0 $spacing-09;
   }
 
   .#{$prefix}--search-magnifier {
     position: absolute;
     top: 50%;
-    left: 0.75rem;
+    left: $spacing-05;
     z-index: 2;
     width: rem(16px);
     height: rem(16px);
     transform: translateY(-50%);
     pointer-events: none;
     fill: $icon-02;
-  }
-
-  .#{$prefix}--search--xl .#{$prefix}--search-magnifier {
-    left: rem(24px);
-    width: rem(20px);
-    height: rem(20px);
-    transform: translate(-50%, -50%);
   }
 
   .#{$prefix}--search-close {
