fix(Copy): set font-size after reset (#6585)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/copy-button/_copy-button.scss
+++ b/packages/components/src/components/copy-button/_copy-button.scss
@@ -75,9 +75,6 @@
   }
 
   // TODO: deprecate above styles
-  .#{$prefix}--copy {
-    font-size: 0;
-  }
 
   .#{$prefix}--copy-btn {
     @include reset;
@@ -138,5 +135,10 @@
       .#{$prefix}--copy-btn__feedback {
       animation: $duration--fast-02 motion(standard, productive) show-feedback;
     }
+  }
+
+  // Needs to come after reset so hidden text is not set to font-size: 100%
+  .#{$prefix}--copy {
+    font-size: 0;
   }
 }
