fix(RadioTile): support arrow key navigation (#6568)
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: jeanservaas <43144260+jeanservaas@users.noreply.github.com>

--- a/packages/components/src/components/tile/_tile.scss
+++ b/packages/components/src/components/tile/_tile.scss
@@ -186,6 +186,10 @@
   .#{$prefix}--tile-input {
     @include hidden;
   }
+
+  .#{$prefix}--tile-input:focus + .#{$prefix}--tile {
+    @include focus-outline('outline');
+  }
 }
 
 @include exports('tile') {
