fix(DataTable) small viewport fixes (#6566)
* fix(DataTable): remove min-width of the container

The min width of the container causes double scrolling.

* fix(DataTable): move overflow-x to the table content

This fixes problems with the toolbar where the table is scrolled.

* fix(Pagination): hide controlls on small viewports

* fix(Pagination): typo fix

* fix(DataTable): update snapshots, fix Table zebra test

* Update packages/components/src/components/pagination/_pagination.scss

Co-authored-by: TJ Egan <tw15egan@gmail.com>

* fix(DataTable): make batch actions scroll

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/components/src/components/data-table/_data-table-core.scss
+++ b/packages/components/src/components/data-table/_data-table-core.scss
@@ -18,9 +18,11 @@
   // Container
   //----------------------------------------------------------------------------
   .#{$prefix}--data-table-container {
-    min-width: rem(500px);
     // Allow space for focus styles
     padding-top: $spacing-01;
+  }
+
+  .#{$prefix}--data-table-content {
     overflow-x: auto;
   }
 
