--- a/packages/components/src/components/data-table/_data-table-action.scss
+++ b/packages/components/src/components/data-table/_data-table-action.scss
@@ -367,6 +367,7 @@
     height: 100%;
     padding-right: $spacing-06;
     padding-left: $spacing-06;
+    overflow-x: auto;
     background-color: $interactive-01;
     transform: translate3d(0, 48px, 0);
     transition: transform $duration--fast-02 motion(standard, productive),
@@ -389,9 +390,6 @@
 
   //btns container
   .#{$prefix}--action-list {
-    position: absolute;
-    top: 0;
-    right: 0;
     display: flex;
   }
 
@@ -467,8 +465,6 @@
 
   // items selected text
   .#{$prefix}--batch-summary {
-    position: absolute;
-    left: 0;
     display: flex;
     align-items: center;
     margin-left: $spacing-05;
