fix(data-table): fix sticky header issues (#6452)
* fix(data-table): fix sticky header issues

* fix(data-table): use prefix, change selector

* fix(data-table): fix sticky expandable data-table

* fix(data-table): fix more sticky table issues

* fix(StickyDataTable): various sticky data table fixes

* fix(DataTable): 1px jump, scrollbar fixes

* fix(DataTable): add min-height

* fix(DataTable): remove min-height

* fix(DataTable): fix for expansion sticky header

* fix(DataTable): restrict empty selector

* fix(DataTable): fix checkbox jumo

--- a/packages/components/src/components/data-table/_data-table-expandable.scss
+++ b/packages/components/src/components/data-table/_data-table-expandable.scss
@@ -64,7 +64,8 @@
 
   tr.#{$prefix}--parent-row.#{$prefix}--expandable-row + tr[data-child-row] td {
     border-bottom: 1px solid $ui-03;
-    transition: all $duration--fast-02 motion(standard, productive);
+    transition: padding-bottom $duration--fast-02 motion(standard, productive),
+      transform $duration--fast-02 motion(standard, productive);
   }
 
   tr.#{$prefix}--parent-row.#{$prefix}--expandable-row
@@ -254,7 +255,7 @@
     tr.#{$prefix}--parent-row.#{$prefix}--expandable-row
     + tr[data-child-row]
     td {
-    transition: all $duration--moderate-01 motion(standard, productive),
+    transition: transform $duration--moderate-01 motion(standard, productive),
       border-bottom $duration--moderate-01 motion(standard, productive),
       border-top $duration--moderate-01 motion(standard, productive);
   }
