chore(slider): add no wrap white space to range label (#6644)
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/components/src/components/slider/_slider.scss
+++ b/packages/components/src/components/slider/_slider.scss
@@ -38,6 +38,7 @@
     @include type-style('code-02');
 
     color: $text-01;
+    white-space: nowrap;
 
     &:last-of-type {
       margin-right: $carbon--spacing-05;
