fix(modal): remove gradiant in high-contrast mode (#6554)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/modal/_modal.scss
+++ b/packages/components/src/components/modal/_modal.scss
@@ -293,6 +293,16 @@
     margin: 0 2px 2px;
   }
 
+  @media screen and (-ms-high-contrast: active) {
+    .#{$prefix}--modal-scroll-content > *:last-child {
+      padding-bottom: 0;
+    }
+
+    .#{$prefix}--modal-content--overflow-indicator {
+      display: none;
+    }
+  }
+
   .#{$prefix}--modal-footer {
     display: flex;
 
