fix(NumberInput): correct disabled input and text styles (#6742)
* fix(number-input): set light disabled number input background color

* fix(NumberInput): add disabled label and helper text classes

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/number-input/_number-input.scss
+++ b/packages/components/src/components/number-input/_number-input.scss
@@ -157,6 +157,13 @@
     background-color: $field-02;
   }
 
+  .#{$prefix}--number--light input[type='number']:disabled,
+  .#{$prefix}--number--light
+    .#{$prefix}--number--readonly
+    input[type='number'] {
+    background-color: $field-02;
+  }
+
   .#{$prefix}--number--mobile {
     width: auto;
     min-width: rem(144px);
