docs(react): update grid docs (#6733)
* docs(react): update grid docs

* docs(react): update toc of grid docs

* Update packages/react/src/components/Grid/Grid.mdx

Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>

* chore(react): remove console.log

* chore(grid): run prettier

Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/react/src/components/Grid/Grid-story.scss
+++ b/packages/react/src/components/Grid/Grid-story.scss
@@ -6,12 +6,12 @@
 }
 
 // grid styles
-#root .outside {
+.bx--grid .outside {
   min-height: 80px;
   height: 100%;
 }
 
-#root .inside {
+.bx--grid .inside {
   min-height: 80px;
   height: 100%;
 }
