fix(button): restrict transitions to relevant properties (#6901)
Co-authored-by: Alessandra Davila <aledavila@ibm.com>

--- a/packages/components/src/components/button/_mixins.scss
+++ b/packages/components/src/components/button/_mixins.scss
@@ -30,7 +30,10 @@
   border-radius: $button-border-radius;
   outline: none;
   cursor: pointer;
-  transition: all $duration--fast-01 motion(entrance, productive);
+  transition: background $duration--fast-01 motion(entrance, productive),
+    box-shadow $duration--fast-01 motion(entrance, productive),
+    border-color $duration--fast-01 motion(entrance, productive),
+    outline $duration--fast-01 motion(entrance, productive);
 
   &:disabled,
   &:hover:disabled,
