fix: update placeholder styles to be consistent in all browsers (#6914)
* fix(helper-mixins): update placeholder-colors mixin

* fix(date-picker): import placeholder-colors mixin

* fix(search): import placeholder-colors mixin

* fix(time-picker): import placeholder-colors mixin

Co-authored-by: Lauren Rice <43969356+laurenmrice@users.noreply.github.com>

--- a/packages/components/src/components/search/_search.scss
+++ b/packages/components/src/components/search/_search.scss
@@ -52,8 +52,7 @@
     }
 
     &::placeholder {
-      color: $text-05;
-      font-weight: 400;
+      @include placeholder-colors;
     }
 
     &::-ms-clear {
@@ -69,7 +68,6 @@
 
     &::placeholder {
       color: $disabled;
-      font-weight: 400;
     }
   }
 
