feat(content-switcher): add support for sm and xl size (#6946)
Co-authored-by: jeanservaas <43144260+jeanservaas@users.noreply.github.com>

--- a/packages/components/src/components/content-switcher/_content-switcher.scss
+++ b/packages/components/src/components/content-switcher/_content-switcher.scss
@@ -22,6 +22,14 @@
     height: rem(40px);
   }
 
+  .#{$prefix}--content-switcher--sm {
+    height: rem(32px);
+  }
+
+  .#{$prefix}--content-switcher--xl {
+    height: rem(48px);
+  }
+
   .#{$prefix}--content-switcher--disabled {
     cursor: not-allowed;
   }
