Feat(Button): add `xl` and `large` button size variant (#7012)
* feat: add large and xl variants to button

* add large and xl button variant to react button `size` prop type
* add larg and xl variant scsss classes
* create new classes in button component scss file

* docs: add xl and large to button size examples

* add xl and large to reflect new props

* test: add large and xl button test

* add button class test
* update public api snapshot

* style(button): reorder mixin import

* docs(button): add size knob to playground story

* style(button): increase icon size on larger button variants

* style(button): don't apply size changes to larger, icon-only variants

* fix(button): change large to lg, small to sm

* fix(button): Apply suggestions from code review

Apply suggestions changing padding based on carbon spacing instead of rem

* change button padding for large button

Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>

* fix(styles): adjust token

* fix(styles): adjust token

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/components/src/components/button/_mixins.scss
+++ b/packages/components/src/components/button/_mixins.scss
@@ -100,3 +100,10 @@
     fill: $icon-color;
   }
 }
+
+@mixin button-padding-large {
+  align-items: baseline;
+  padding-top: $spacing-05;
+  padding-right: $layout-05;
+  padding-left: $spacing-05;
+}
